[gd_scene load_steps=7 format=3 uid="uid://c45vn5g0rmckg"]

[ext_resource type="Script" path="res://Interface/General/player_info_container.gd" id="1_vcb4t"]
[ext_resource type="PackedScene" uid="uid://5hd627njgokg" path="res://Interface/Buttons/back_button.tscn" id="2_e4fa7"]
[ext_resource type="Texture2D" uid="uid://jwvb7y2fmhm1" path="res://Images/two-coins(1).svg" id="2_jpksd"]
[ext_resource type="Texture2D" uid="uid://deggi7vouicbp" path="res://Images/tasks.svg" id="4_ewa5b"]
[ext_resource type="PackedScene" uid="uid://07j4s06c4suv" path="res://Interface/Fractions/fractions_icon.tscn" id="5_bmbiw"]
[ext_resource type="Texture2D" uid="uid://o6yisjqpa1t8" path="res://Images/archive.svg" id="6_a6otf"]

[node name="PlayerInfoContainer" type="HBoxContainer"]
offset_right = 1152.0
offset_bottom = 61.0
theme_override_constants/separation = 40
script = ExtResource("1_vcb4t")

[node name="BackButton" parent="." instance=ExtResource("2_e4fa7")]
layout_mode = 2

[node name="GoldTexture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
texture = ExtResource("2_jpksd")
expand_mode = 1

[node name="GoldAmount" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "100"

[node name="Tasks" type="TextureRect" parent="."]
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
texture = ExtResource("4_ewa5b")
expand_mode = 1

[node name="FractionsIcon" parent="." instance=ExtResource("5_bmbiw")]
layout_mode = 2
scene_file = "res://Interface/Fractions/fraction_list.tscn"

[node name="Archive" type="TextureRect" parent="."]
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
texture = ExtResource("6_a6otf")
expand_mode = 1
